--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN desifgpoug</title>
+    <title>PLN Prod</title>
     <style>
         * {
             margin: 0;
@@ -933,12 +933,12 @@
             <p>PLN Prod</p>
         </div>
         <ul>
-            <li><a href="#narration" onclick="scrollToProject(4)">Conservatoire</a></li>
-            <li><a href="#publicite" onclick="scrollToProject(7)">Nature</a></li>
-            <li><a href="#musique-video" onclick="scrollToProject(10)">Sport</a></li>
+            <li><a href="#narration" onclick="scrollToProject(4)">Narration</a></li>
+            <li><a href="#publicite" onclick="scrollToProject(7)">Publicité</a></li>
+            <li><a href="#musique-video" onclick="scrollToProject(10)">Musique-Vidéo</a></li>
             <li><a href="#" onclick="showSection('bio')">Bio</a></li>
             <li><a href="#" onclick="showSection('contact')">Contact</a></li>
-            <li><a href="#" onclick="showSection('equip')">Formules</a></li>
+            <li><a href="#" onclick="showSection('equip')">Équipement</a></li>
         </ul>
     </nav>
 
@@ -1021,9 +1021,9 @@
                 <div class="arrow arrow-left">❮</div>
             </div>
             <div class="mosaic-item" data-project="project10">
-                <img src="https://media.giphy.com/media/l0Iyl55kTeh71nTWw/giphy.gif" alt="Vidéo Sport">
+                <img src="https://media.giphy.com/media/l0Iyl55kTeh71nTWw/giphy.gif" alt="Vidéo Narrative">
                 <div class="content">
-                    <h1>Sport</h1>
+                    <h1>Projet 10</h1>
                     <button onclick="showVideo('project10')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-right">❯</div>
@@ -1171,13 +1171,7 @@
             project7: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 7", description: "Description du projet 7..." },
             project8: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 8", description: "Description du projet 8..." },
             project9: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Projet 9", description: "Description du projet 9..." },
-            project10: { url: "https://www.youtube.com/watch?v=cM4NBRcUd4Q", title: "Sport", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France).
-
-"Coupe des Miss" is an international indoor archery tournament, for women only, which takes place in France, in Issy-les-Moulineaux near Paris, at the very end of winter.
-
-En soutien à l'association :
- "La Cancer du Sein, Parlons-en!" ( http://www.cancerdusein.org )" },
-            
+            project10: { url: "https://www.youtube.com/embed/9bZkp7q19f0", title: "Projet 10", description: "Description du projet 10..." },
             project11: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 11", description: "Description du projet 11..." },
             project12: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 12", description: "Description du projet 12..." },
             video1: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Vidéo 1", description: "Description vidéo 1..." },
