--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN Prod</title>
+    <title>PLN Prodi</title>
     <style>
         * {
             margin: 0;
@@ -933,12 +933,12 @@
             <p>PLN Prod</p>
         </div>
         <ul>
-            <li><a href="#narration" onclick="scrollToProject(4)">Narration</a></li>
-            <li><a href="#publicite" onclick="scrollToProject(7)">Publicité</a></li>
-            <li><a href="#musique-video" onclick="scrollToProject(10)">Musique-Vidéo</a></li>
+            <li><a href="#narration" onclick="scrollToProject(4)">Conservatoire</a></li>
+            <li><a href="#publicite" onclick="scrollToProject(7)">Nature</a></li>
+            <li><a href="#musique-video" onclick="scrollToProject(10)">Sport</a></li>
             <li><a href="#" onclick="showSection('bio')">Bio</a></li>
             <li><a href="#" onclick="showSection('contact')">Contact</a></li>
-            <li><a href="#" onclick="showSection('equip')">Équipement</a></li>
+            <li><a href="#" onclick="showSection('equip')">Formules</a></li>
         </ul>
     </nav>
 
